src/objects/appsolutely__Creditsafe_Company_Negative_Info_NL__c.object
<CustomObject>
    <description>Class CourtData.</description>
    <fields>
        <fullName>appsolutely__Address__c</fullName>
        <description>Address of the receiver that deals with the bankruptcy of this company.</description>
        <label>Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Court_Action__c</fullName>
        <description>Indicates if there is a court action.</description>
        <label>Court Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Negative Info NL Court Items</relationshipLabel>
        <relationshipName>Negative_Info_NL_Court_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Of_Bankruptcy__c</fullName>
        <description>Date of company’s bankruptcy.</description>
        <label>Date Of Bankruptcy</label>
        <type>Date</type>
    </fields>
    <label>Creditsafe Company Negative Info NL</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Negative Info NL</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Negative Info NL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>